##----------------------------------------------------------------------------
##       Makefile.am,v 4.2 2004/01/22 06:07:50 ossama Exp
##
##       Makefile for the Token tests
##----------------------------------------------------------------------------

##
##  Process this file with automake to create Makefile.in
##

SUBDIRS = \
  collection  \
  deadlock  \
  invariant  \
  manual  \
  mutex  \
  rw_lock
