## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libcontext.la
libcontext_la_SOURCES = \
        SoContext.cxx \
        SoContext.h \
        SoContextElement.cxx \
        SoContextElement.h \
        SoContextMultiSwitch.cxx \
        SoContextMultiSwitch.h \
        SoContextReport.cxx \
        SoContextReport.h \
        SoContextSeparator.cxx \
        SoContextSeparator.h \
        SoContextSwitch.cxx \
        SoContextSwitch.h \
        SoNodeContext.cxx \
        SoNodeContext.h \
        SoNodeContextReport.cxx \
        SoNodeContextReport.h \
        StudierstubeContext.cxx \
        StudierstubeContext.h
