## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libdiv.la
libdiv_la_SOURCES = \
        ControlModule.cxx \
        ControlModule.h \
        RMCast.h \
        RMCast_Ack_Worker.cxx \
        RMCast_Ack_Worker.h \
        RMCast_Copy_On_Write.h \
        RMCast_Fork.cxx \
        RMCast_Fork.h \
        RMCast_Fragment.cxx \
        RMCast_Fragment.h \
        RMCast_IO_UDP.cxx \
        RMCast_IO_UDP.h \
        RMCast_Membership.cxx \
        RMCast_Membership.h \
        RMCast_Module.cxx \
        RMCast_Module.h \
        RMCast_Module_Factory.cxx \
        RMCast_Module_Factory.h \
        RMCast_Pack.cxx \
        RMCast_Pack.h \
        RMCast_Partial_Message.cxx \
        RMCast_Partial_Message.h \
        RMCast_Proxy.cxx \
        RMCast_Proxy.h \
        RMCast_Reassembly.cxx \
        RMCast_Reassembly.h \
        RMCast_Receiver_Module.cxx \
        RMCast_Receiver_Module.h \
        RMCast_Reliable_Factory.cxx \
        RMCast_Reliable_Factory.h \
        RMCast_Reordering.cxx \
        RMCast_Reordering.h \
        RMCast_Resend_Handler.cxx \
        RMCast_Resend_Handler.h \
        RMCast_Resend_Worker.cxx \
        RMCast_Resend_Worker.h \
        RMCast_Retransmission.cxx \
        RMCast_Retransmission.h \
        RMCast_Role_Fork.cxx \
        RMCast_Role_Fork.h \
        RMCast_Sequencer.cxx \
        RMCast_Sequencer.h \
        RMCast_Singleton_Factory.cxx \
        RMCast_Singleton_Factory.h \
        RMCast_Transceiver_Factory.cxx \
        RMCast_Transceiver_Factory.h \
        RMCast_UDP_Event_Handler.cxx \
        RMCast_UDP_Event_Handler.h \
        RMCast_UDP_Proxy.cxx \
        RMCast_UDP_Proxy.h \
        RMCast_UDP_Reliable_Transceiver.cxx \
        RMCast_UDP_Reliable_Transceiver.h \
        RMCast_Unpack.cxx \
        RMCast_Unpack.h \
        RMCast_Worker.h \
        SoDivGroup.cxx \
        SoDivGroup.h \
        StbDiv.cxx \
        StbDiv.h \
        divlogo.h \
        divmain.cxx \
        divmain.h
