## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libevent3d.la
libevent3d_la_SOURCES = \
        Base3D.cxx \
        Base3D.h \
        Sb3DEventHistory.cxx \
        Sb3DEventHistory.h \
        So3DEvent.cxx \
        So3DEvent.h \
        SoHandle3DEventAction.cxx \
        SoHandle3DEventAction.h \
        SoKeyToggle.cxx \
        SoKeyToggle.h \
        Stb3DEventGenerator.cxx \
        Stb3DEventGenerator.h \
        StbEventInspector.cxx \
        StbEventInspector.h
