## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libinteraction.la
libinteraction_la_SOURCES = \
        So3DSensor.cxx \
        So3DSensor.h \
        So3DSeparator.cxx \
        So3DSeparator.h \
        SoBehaviorKit.cxx \
        SoBehaviorKit.h \
        SoButtonPressGesture.cxx \
        SoButtonPressGesture.h \
        SoButtonReleaseGesture.cxx \
        SoButtonReleaseGesture.h \
        SoDragKit.cxx \
        SoDragKit.h \
        SoDragSeparator.cxx \
        SoDragSeparator.h \
        SoDraggerKit.cxx \
        SoDraggerKit.h \
        SoFitInKit.cxx \
        SoFitInKit.h \
        SoEnterGesture.cxx \
        SoEnterGesture.h \
        SoExitGesture.cxx \
        SoExitGesture.h \
        SoGesture.cxx \
        SoGesture.h \
        SoLayoutKit.cxx \
        SoLayoutKit.h \
        SoMoveGesture.cxx \
        SoMoveGesture.h \
        SoSpeechGesture.cxx \
        SoSpeechGesture.h \
        SoSubBehavior.h \
        SoTouchButtonDragKit.cxx \
        SoTouchButtonDragKit.h \
        SoTouchDragKit.cxx \
        SoTouchDragKit.h
