## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libmisc.la
libmisc_la_SOURCES = \
        ConvertToSFPlane.cxx \
        ConvertToSFPlane.h \
        GLTweak.cxx \
        GLTweak.h \
        GRT_defs.h \
        IMGR.cxx \
        IMGR.h \
        OnScreenRenderer.cxx \
        OnScreenRenderer.h \
        SoAbortGroup.cxx \
        SoAbortGroup.h \
        SoAlphaMaskKit.cxx \
        SoAlphaMaskKit.h \
        SoArtifactKit.cxx \
        SoArtifactKit.h \
        SoAudio.cxx \
        SoAudio.h \
        SoAxisRotateConstraint.cxx \
        SoAxisRotateConstraint.h \
        SoBillboardKit.cxx \
        SoBillboardKit.h \
        SoBoxConstraint.cxx \
        SoBoxConstraint.h \
        SoConditionalTrigger.cxx \
        SoConditionalTrigger.h \
        SoConstraint.cxx \
        SoConstraint.h \
        SoEaseIn.cxx \
        SoEaseIn.h \
        SoEngineWrapper.cxx \
        SoEngineWrapper.h \
        SoExtCubeKit.cxx \
        SoExtCubeKit.h \
        SoFactorRotation.cxx \
        SoFactorRotation.h \
        SoFanIn.cxx \
        SoFanIn.h \
        SoFileSubgraph.cxx \
        SoFileSubgraph.h \
        SoFishnet.cxx \
        SoFishnet.h \
        SoFrameBuffer.cxx \
        SoFrameBuffer.h \
        SoGLFrameBufferElement.cxx \
        SoGLFrameBufferElement.h \
        SoGLStencilBufferElement.cxx \
        SoGLStencilBufferElement.h \
        SoGroupSwitch.cxx \
        SoGroupSwitch.h \
        SoGroupSwitchElement.cxx \
        SoGroupSwitchElement.h \
        SoLineConstraint.cxx \
        SoLineConstraint.h \
        SoMD2NodeKit.h \
        SoMD2NodeKit.cxx \
        SoMultMatrix.cxx \
        SoMultMatrix.h \
        SoMultiSwitch.cxx \
        SoMultiSwitch.h \
        SoMultiSwitchElement.cxx \
        SoMultiSwitchElement.h \
        SoNodeToName.cxx \
        SoNodeToName.h \
        SoRayPicker.cxx \
        SoRayPicker.h \
        SoRayPickerTracker.cxx \
        SoRayPickerTracker.h \
        SoRefEngine.cxx \
        SoRefEngine.h \
        SoRenderSync.cxx \
        SoRenderSync.h \
        SoRenderSyncUDP.cxx \
        SoRenderSyncUDP.h \
	SoRotateVector.cxx \
	SoRotateVector.h \
        SoRoute.cxx \
        SoRoute.h \
        SoRouteDB.cxx \
        SoRouteDB.h \
        SoRouter.cxx \
        SoRouter.h \
        SoSFFieldContainer.cxx \
        SoSFFieldContainer.h \
        SoScreenCapture.cxx \
        SoScreenCapture.h \
	SoSocketModule.cxx \
	SoSocketModule.h \
        SoStencilBuffer.cxx \
        SoStencilBuffer.h \
        SoStreamLine.cxx \
        SoStreamLine.h \
        SoStringCalculator.cxx \
        SoStringCalculator.h \
        SoStringMap.cxx \
        SoStringMap.h \
        SoStroke.cxx \
        SoStroke.h \
        SoSwitchSelect.cxx \
        SoSwitchSelect.h \
        SoUse.cxx \
        SoUse.h \
        SoVariable.cxx \
        SoVariable.h \
        SoVisibleSwitchEngine.cxx \
        SoVisibleSwitchEngine.h \
	TCPServerClient.cxx \
	TCPServerClient.h \
        UDPServerClient.h \
        ivmacros.h
