## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

SUBDIRS = viewer

noinst_LTLIBRARIES = libresource.la
libresource_la_SOURCES = \
        SoPenKit.cxx \
        SoPenKit.h \
        SoPipKit.cxx \
        SoPipKit.h \
        SoPipSheetKit.cxx \
        SoPipSheetKit.h \
        SoPullDownKit.cxx \
        SoPullDownKit.h \
        SoTabButtonKit.cxx \
        SoTabButtonKit.h \
        SoTabKit.cxx \
        SoTabKit.h \
        SoTrackedArtifactKit.cxx \
        SoTrackedArtifactKit.h \
        SoUserKit.cxx \
        SoUserKit.h \
        SoUserManagerKit.cxx \
        SoUserManagerKit.h \
        StbSkinLoader.cxx \
        StbSkinLoader.h
