## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libseams.la
libseams_la_SOURCES = \
        SoClipCube.cxx \
        SoClipCube.h \
        SoCubeSeamKit.cxx \
        SoCubeSeamKit.h \
        SoSeamKit.cxx \
        SoSeamKit.h
