## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libtracker.la
libtracker_la_SOURCES = \
        SoPartitionKit.cxx \
        SoPartitionKit.h \
        SoStationKit.cxx \
        SoStationKit.h \
        SoTrakEngine.cxx \
        SoTrakEngine.h \
        StbInputModule.cxx \
        StbInputModule.h \
        StbKeyboardSource.h \
        StbMouseSource.h \
        StbSink.cxx \
	StbSink.h \
        StbSource.cxx \
        StbSource.h \
        TrackerOT.cxx \
        TrackerOT.h
