## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libutil.la
libutil_la_SOURCES = \
        GLtools.cxx \
        GLtools.h \
        ReactorTask.cxx \
        ReactorTask.h \
        StbBuffer.cxx \
        StbBuffer.h \
        buffer.cxx \
        buffer.h \
        container.cxx \
        container.h \
        fileBrowser.cxx \
        fileBrowser.h \
        ivio.cxx \
        ivio.h \
        ivutil.cxx \
        ivutil.h \
        math2.h \
        option.cxx \
        option.h \
        os.cxx \
        os.h \
        sound.cxx \
        sound.h \
        timerutility.cxx \
        timerutility.h \
        zpthread.cxx \
        zpthread.h
