## Makefile.am -- Process this file with automake to produce Makefile.in

include $(top_srcdir)/src/Makefile.common

noinst_LTLIBRARIES = libvc.la
libvc_la_SOURCES = \
        SoVCKit.cxx \
        SoVCKit.h \
        SoVCMainPanelKit.cxx \
        SoVCMainPanelKit.h \
        SoVCSubPanelKit.cxx \
        SoVCSubPanelKit.h \
        SoVCBarKit.cxx \
        SoVCBarKit.h \
        SoVCManager.cxx \
        SoVCManager.h \
        SoVCWidgetKit.cxx \
        SoVCWidgetKit.h \
        SoVCPushWidgetKit.cxx \
        SoVCPushWidgetKit.h \
	SoVCToggleWidgetKit.cxx \
	SoVCToggleWidgetKit.h \
	SoVCDialWidgetKit.cxx \
	SoVCDialWidgetKit.h \
	SoVCDraggerKit.cxx \
	SoVCDraggerKit.h \
	SoVCStatusBarKit.cxx \
	SoVCStatusBarKit.h \
	SoVCCalibrationWidgetKit.cxx \
	SoVCCalibrationWidgetKit.h
